# django-accounts-center

./: .gitignore  README.md  dac.code-workspace  layout.html  pyproject.toml  report.md  shots.yml  tasks.py
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
dac/: apps.py  context_processors.py  menus.py  renderers.py  urls.py  views.py
dac/addons/: urls.py
dac/addons/actstream/: menus.py  views.py
dac/addons/actstream/templates/cotton/actstream/: followers.html  following.html
dac/addons/allauth/: README.md  apps.py  menus.py  urls.py
dac/addons/allauth/templates/account/: account_inactive.html  base.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  confirm_phone_verification_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  phone_change.html  reauthenticate.html  request_login_code.html  signup.html  signup_by_passkey.html  signup_closed.html  verification_sent.html  verified_email_required.html
dac/addons/allauth/templates/account/snippets/: already_logged_in.html  warn_no_email.html
dac/addons/allauth/templates/allauth/elements/: alert.html  badge.html  button.html  button__entrance.html  form__entrance.html  h1.html  h1__entrance.html  h2.html  h2__entrance.html  provider.html  provider_list.html  table.html
dac/addons/allauth/templates/allauth/layouts/: base.html  entrance.html  manage.html
dac/addons/allauth/templates/cotton/dac/: manage_email.html  manage_email_group.html
dac/addons/allauth/templates/cotton/dac/allauth/: mfa.html
dac/addons/allauth/templates/cotton/dac/login/: side_by_side.html  standard.html
dac/addons/allauth/templates/dac/menus/: allauth_logout.html
dac/addons/allauth/templates/idp/oidc/: authorization_form.html  device_authorization_code_form.html  device_authorization_confirm_form.html  device_authorization_confirmed.html  device_authorization_denied.html  error.html
dac/addons/allauth/templates/mfa/: authenticate.html  index.html  reauthenticate.html  trust.html
dac/addons/allauth/templates/mfa/recovery_codes/: generate.html  index.html
dac/addons/allauth/templates/mfa/totp/: activate_form.html  deactivate_form.html
dac/addons/allauth/templates/mfa/webauthn/: add_form.html  authenticator_confirm_delete.html  authenticator_list.html  edit_form.html  reauthenticate.html  signup_form.html
dac/addons/allauth/templates/mfa/webauthn/snippets/: login_script.html  scripts.html
dac/addons/allauth/templates/openid/: login.html
dac/addons/allauth/templates/socialaccount/: authentication_error.html  base_entrance.html  connections.html  login_cancelled.html  login_redirect.html  provider_list.html  signup.html
dac/addons/allauth/templates/socialaccount/snippets/: login.html  provider_list.html
dac/addons/allauth/templates/totp/: activate_form.html
dac/addons/allauth/templates/usersessions/: usersession_list.html
dac/addons/stripe/: apps.py  menus.py  urls.py  views.py
dac/addons/stripe/templates/dac/stripe/: drf_stripe.html  pricing.html
dac/static/dac/: management.css  stylesheet.scss
dac/templates/cotton/: link.html
dac/templates/cotton/dac/: action.html  action_group.html  alert.html  avatar.html  badge.html  breadcrumb.html  breadcrumbs.html  card.html  entrance.html  full_screen.html  full_screen_card.html  icon.html  index.html  link.html  login.html  navbar.html  page.html  page_header.html  table.html  title.html
dac/templates/cotton/dac/card/: index.html  text.html
dac/templates/cotton/dac/components/: avatar.html
dac/templates/cotton/dac/dashboard/: card.html  status_item.html
dac/templates/cotton/dac/dropdown/: index.html  item.html
dac/templates/cotton/dac/entrance/: back_button.html  brand_logo.html  card.html  footer.html  form_field.html  image_overlay.html  index.html  social_login_button.html
dac/templates/cotton/dac/entrance/action/: index.html  primary.html  secondary.html
dac/templates/cotton/dac/form/: field.html  index.html
dac/templates/cotton/dac/header/: index.html  menu_toggle.html  return_to_site.html
dac/templates/cotton/dac/layout/: standard.html
dac/templates/cotton/dac/layout/sidebar/: header.html
dac/templates/cotton/dac/menu/: group.html  group_heading.html  index.html  item.html
dac/templates/cotton/dac/sections/user_sidebar/: index.html  logout_button.html  toggle.html
dac/templates/cotton/dac/sidebar/: footer.html  header.html  index.html  menu.html
dac/templates/cotton/icons/: anon_user.html  github.html  google.html  logout.html  spinner.html
dac/templates/cotton/navbar/widgets/: user.html
dac/templates/cotton/page/: form_section.html
dac/templates/dac/: base.html  entrance.html  home.html
dac/templates/dac/menus/: dropdown.html  dropdown_item.html  root.html  sidebar.html
dac/templatetags/: dac.py
dac/themes/bs5/: apps.py
dac/themes/bs5/templates/cotton/dac/action/: danger.html  icon.html  index.html  primary.html  secondary.html
dac/themes/bs5/templates/cotton/dac/components/: alert.html  badge.html  table.html
example/: allauth_settings.py  apps.py  settings.py  urls.py
example/templates/: base.html
example/templates/example/: home.html
tests/: conftest.py  factories.py  settings.py  test_allauth_urls.py  test_component_templates.py  test_integration.py  test_layout_corrected.py  test_layout_detection_corrected.py  test_layout_simple.py  test_menus.py  test_template_conditionals.py  test_templatetags.py  test_views.py
tests/e2e/: README.md  __init__.py  conftest.py  test_e2e_dashboard.py  test_e2e_login_flow.py  test_e2e_logout_flow.py  test_e2e_password_reset.py  test_e2e_signup_flow.py
tests/test_addons/: __init__.py
tests/test_addons/test_actstream/: __init__.py  test_views.py
tests/test_addons/test_allauth/: __init__.py  test_urls.py
tests/test_addons/test_stripe/: __init__.py
(+9 files in other folders)
